applications/client/tekton/workload.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-webhook-validator
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: github-token-validator
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: github-token-validator  
    spec:
      securityContext:
        runAsNonRoot: true
        allowPrivilegeEscalation: false
      containers:
      - name: github-webhook-validator
        image: github-webhook-validator
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 50Mi
            cpu: 100m
          requests:
            memory: 25Mi
            cpu: 50m
---
apiVersion: v1
kind: Service
metadata:
  name: github-webhook-validator
spec:
  selector:
    app.kubernetes.io/name: github-token-validator
  ports:
  - name: https
    port: 8080
    protocol: TCP
    targetPort: 8080
