applications/client/tekton/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: tekton
  namespace: tekton-pipelines 
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: tekton
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: tekton
  namespace: pipelines-as-code
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: tekton
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton
  namespace: tekton
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: ListenerSet
      name: tekton
  hostnames:
  - tekton.jynolen.fr
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tekton-dashboard
          namespace: tekton-pipelines 
          port: 9097
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
    - backendRefs:
        - group: ""
          kind: Service
          name: pipelines-as-code-controller
          namespace: pipelines-as-code
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /pac
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
